Ajout des méthodes pour projets matérials + routes respectives
